# bert-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/: main.py
tests/: test_main.py
