[tool.poetry]
name = "bert-test"
version = "0.0.1"
description = "Random content attached to my blog."
authors = ["Kacper Duras <git@kacperduras.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
torch = "^2.5.1"
numpy = "^2.2.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.poetry.scripts]
test = "poetry run pytest"
